--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.9.0",
     "font-awesome": "^4.7.0",
+    "html-loader": "^0.4.5",
+    "html-webpack-plugin": "^2.28.0",
     "node-sass": "^4.5.0",
     "resolve-url-loader": "^2.0.2",
     "sass-loader": "^5.0.1",
